PR/35055: Wada Keiji: wait did not keep the status of terminated jobs as expected.